# MLOPS_Architecture_0

./: .gitignore  .pre-commit-config.yaml  README.MD  h -u origin main  init_setup.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  templates.py  tox.ini
Realtime_api/: generate_data.py  test.ipynb
experiment/: experiments.ipynb
model_registery/best_features/: top_10_features.joblib  top_12_features.joblib
model_registery/data_versions/: test_array.joblib  train_array.joblib
src/components/: __init__.py  data_ingestion.py  data_transformation.py  model_trainer.py  path_initializer.py  preprocessor.joblib  test.py
src/constants/: constants.py
src/logger/: logging.py
src/pipeline/: inference_pipeline.py  prediction_pipeline.py  training_pipeline.py
src/utils/: utils.py
tests/integration/: integratng.py
tests/unit/: sample_test.py  test_config.ini  unit.py
