[metadata]
name = blackmi_mobiles
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A project for managing mobile model registration and data processing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/blackmi-mobiles
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas
    numpy
    scikit-learn
    joblib
    configparser

[options.extras_require]
dev =
    black
    isort
    pytest
    pytest-cov
    tox
    mypy

[options.package_data]
* = *.ini, *.yaml, *.yml

[tool:pytest]
addopts = --cov=src --cov-report=html --disable-warnings
testpaths = tests

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist
